--- a/src/sample/style.css
+++ b/src/sample/style.css
@@ -1,18 +1,18 @@
 .bold, .italic{
-    -fx-background-color: #BABCC1;
-    -fx-border-color: black;
-    -fx-border-width: 2px;
+    -fx-background-color: #E5A6FF;
+    /*-fx-border-color: black;
+    -fx-border-width: 2px;*/
 }
 
  .bold:hover, .italic:hover {
-    -fx-background-color: #7E7F81;
+    -fx-background-color: #C089D7;
 }
 
-.cancel {
+.escape {
     -fx-background-color: #E6B9FF;
 }
 
-.cancel:hover {
+.escape:hover {
     -fx-background-color: #FFB198;
 }
 
@@ -22,4 +22,25 @@
 
 .submit:hover {
     -fx-background-color: #58C63F;
+}
+
+.cancel {
+    -fx-background-color: #FF6060;
+}
+
+.cancel:hover {
+    -fx-background-color: #FF3D3D;
+}
+
+.bubbles {
+    -fx-background-color: #B9EBFF; /*BLUE CLOUD BACKGROUNDS*/
+    -fx-border-color: black;
+    -fx-border-width: 1px;
+}
+
+
+.stackPane {
+    -fx-background-color: #E6B9FF; /*PURPLE BORDER STAGE*/
+    -fx-border-color: black;
+    -fx-border-width: 1px;
 }
