Pushing to main cause forgot to make a branch only difference is added another empty tab

--- a/src/sample/style.css
+++ b/src/sample/style.css
@@ -48,3 +48,15 @@
     -fx-border-color: black;
     -fx-border-width: 1px;
 }
+
+/*DOES THIS WORK?
+.instructionScroll {
+    -fx-background-color: #E6B9FF; /*PURPLE BORDER STAGE
+
+}
+*/
+/*AAAAAARGH
+.character {
+    -fx-background-color: red;
+}
+*/
