changed the layout of the caption modal - incomplete

--- a/src/sample/style.css
+++ b/src/sample/style.css
@@ -50,7 +50,11 @@
 }
 
 .layoutGrid{
-    -fx-background-color: #E6B9FF; /*PURPLE BORDER STAGE*/
+    -fx-background-color:  #E6B9FF; /*PURPLE BORDER STAGE*/
     -fx-border-color: black;
     -fx-border-width: 1px;
+}
+
+.capTextField {
+    -fx-padding: 10;
 }
