have popup a bit stylised and have it printing to console whats entered, have to tie that to the comic strips title

--- a/src/sample/style.css
+++ b/src/sample/style.css
@@ -141,3 +141,10 @@
      -fx-border-color: black;
      -fx-border-width: 1px;
 }
+
+.popUpPrompt {
+    -fx-alignment: CENTER;
+    -fx-font-weight: bold;
+    -fx-font-family: helvetica;
+    -fx-font-size: 18;
+}
