--- a/src/sample/style.css
+++ b/src/sample/style.css
@@ -140,6 +140,8 @@
      -fx-background-color:  #E6B9FF; /*PURPLE BORDER STAGE*/
      -fx-border-color: black;
      -fx-border-width: 1px;
+     -fx-padding: 5;
+
 }
 
 .popUpPrompt {
